# IndefiniteStream

./: CMakeLists.txt  LICENSE  NamedType.hpp  README.md  indefinite-stream.hpp  indefinite_stream.hpp  main.cc  named_type.hpp
doc/: description.md
test/: CMakeLists.txt  indefinite-unittest.cpp  indefinite_unittest.cpp
